# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2017 Cavium, Inc

allow_experimental_apis = true
sources = files('evt_main.c',
		'evt_options.c',
		'evt_test.c',
		'parser.c',
		'test_order_common.c',
		'test_order_atq.c',
		'test_order_queue.c',
		'test_perf_common.c',
		'test_perf_atq.c',
		'test_perf_queue.c')
deps += 'eventdev'
